working prototype with background blurred photo, fixed corner radius around edges

--- a/photozzap/static/conference/default.css
+++ b/photozzap/static/conference/default.css
@@ -93,10 +93,14 @@ a, a:hover {
 .action-sidebar {
     border-radius:10px;
     z-index:3;
-   
+    
     cursor: pointer;
     display: none;
-    background-color: rgba(40, 40, 40, 0.40); 
+    box-shadow: 0px 0px 8px 4px #CCCCCC;    
+       
+    background: url(http://res.cloudinary.com/photozzap/image/upload/b_rgb:aaaaaa,c_fit,e_blur:200,h_200,o_85,q_80,w_200/v1386994354/tijrk1tmmtymauxxznko.jpg) no-repeat fixed;
+    background-size: 1157px 746px;    
+
 }
 
 .action-sidebar-expanded {
@@ -253,6 +257,8 @@ a, a:hover {
     bottom: 0%;
     left: 42%;
     width: 15%;
+    border-bottom-right-radius: 0px;
+    border-bottom-left-radius: 0px;            
 }
 
 .chat-sidebar {
@@ -260,6 +266,8 @@ a, a:hover {
     left: 25%;
     height: 40%;
     width: 55%;
+    border-bottom-right-radius: 0px;
+    border-bottom-left-radius: 0px;        
 }
 
 .chat-sidebar-expanded {
@@ -267,7 +275,7 @@ a, a:hover {
 }
 
 .chat-sidebar-collapsed {
-    bottom: -40%;
+    bottom: -41%;
 }    
 
 .chat-sidebar .action-sidebar-header img {
@@ -302,12 +310,17 @@ a, a:hover {
     top: 42%;
     left: 0%;
     width: 15%;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
 }
 
 .users-sidebar {
     position: absolute;
     width: 30%;
-    height: 100%;
+    height: 98%;
+    top: 1%;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;    
 }
 
 .users-sidebar-expanded {
@@ -315,7 +328,7 @@ a, a:hover {
 }
 
 .users-sidebar-collapsed {
-    left: -30%;
+    left: -31%;
 }
 
 .history-sidebar-icon {
@@ -323,12 +336,18 @@ a, a:hover {
     top: 42%;
     right: 0%;
     width: 15%;
+    
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
 }
 
 .history-sidebar {
     position: absolute;
     width: 30%;
-    height: 100%;
+    height: 98%;
+    top: 1%;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;    
 }
 
 .history-sidebar-expanded {
@@ -337,7 +356,7 @@ a, a:hover {
 
 
 .history-sidebar-collapsed {
-    right: -30%;
+    right: -31%;
 }
 
 .history-sidebar-alternate {
